Add enter listener to new units per week input field

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 addEnterListener(document.getElementById("cpt_code_"+num), num);
                 addEnterListener(document.getElementById("units_per_auth_"+num), num);
                 addEnterListener(document.getElementById("hours_per_week_"+num), num);
+                addEnterListener(document.getElementById("units_per_week_in_"+num), num);
                 addEnterListener(document.getElementById("weeks_per_auth_"+num), num);
                 addEnterListener(document.getElementById("mins_per_unit_"+num), num);
             }
